--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       </div>
     </footer>
     <!-- BACKDROP -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <!-- MODAL -->
       <div class="modal">
         <button class="modal-close-btn" type="button">
