--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       </div>
     </footer>
     <!-- BACKDROP -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <!-- MODAL -->
       <div class="modal">
         <button class="modal-close-btn" type="button">
@@ -568,6 +568,8 @@
                 class="modal-input"
                 name="user-phone"
                 id="user-phone"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
                 required
               />
               <svg class="modal-input-icon" width="18" height="24">
