--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="burger-btn">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -532,7 +537,7 @@
       </div>
     </footer>
     <!-- BACKDROP -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <!-- MODAL -->
       <div class="modal">
         <button class="modal-close-btn" type="button">
