delete 1 file and update 2 files

--- a/index.html
+++ b/index.html
@@ -57,11 +57,85 @@
             </li>
           </ul>
         </address>
-        <button type="button" class="burger-btn">
+        <button type="button" class="burger-btn" title="Open mobile menu">
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
+      </div>
+
+      <!-- MOBILE MENU -->
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button
+            type="button"
+            class="mobile-menu-close-btn"
+            title="Close mobile menu"
+          >
+            <svg class="close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link current" href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="#portfolio">Portfolio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="#contacts">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-menu-contacts">
+            <ul class="mobile-menu-contacts-list">
+              <li class="mobile-menu-contacts-item">
+                <a class="mobile-menu-contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mobile-menu-contacts-item">
+                <a
+                  class="mobile-menu-contacts-link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-menu-socials-list">
+            <li class="mobile-menu-socials-item">
+              <a
+                class="mobile-menu-socials-link"
+                href="https://www.instagram.com"
+                >Instagram</a
+              >
+            </li>
+            <li class="mobile-menu-socials-item">
+              <a class="mobile-menu-socials-link" href="https://www.x.com"
+                >Twitter</a
+              >
+            </li>
+            <li class="mobile-menu-socials-item">
+              <a
+                class="mobile-menu-socials-link"
+                href="https://www.facebook.com"
+                >Facebook</a
+              >
+            </li>
+            <li class="mobile-menu-socials-item">
+              <a
+                class="mobile-menu-socials-link"
+                href="https://www.linkedin.com"
+                >LinkedIn</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -152,6 +226,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.instagram.com/"
+                      title="Mark Guerrero on Instagram"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -159,7 +234,11 @@
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social-link" href="https://www.x.com/">
+                    <a
+                      class="team-social-link"
+                      href="https://www.x.com/"
+                      title="Mark Guerrero on Twitter"
+                    >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -169,6 +248,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.facebook.com/"
+                      title="Mark Guerrero on Facebook"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
@@ -179,6 +259,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.linkedin.com/"
+                      title="Mark Guerrero on LinkedIn"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -203,6 +284,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.instagram.com/"
+                      title="Tom Ford on Instagram"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -210,7 +292,11 @@
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social-link" href="https://www.x.com/">
+                    <a
+                      class="team-social-link"
+                      href="https://www.x.com/"
+                      title="Tom Ford on Twitter"
+                    >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -220,6 +306,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.facebook.com/"
+                      title="Tom Ford on Facebook"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
@@ -230,6 +317,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.linkedin.com/"
+                      title="Tom Ford on LinkedIn"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -254,6 +342,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.instagram.com/"
+                      title="Camila Garcia on Instagram"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -261,7 +350,11 @@
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social-link" href="https://www.x.com/">
+                    <a
+                      class="team-social-link"
+                      href="https://www.x.com/"
+                      title="Camila Garcia on Twitter"
+                    >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -271,6 +364,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.facebook.com/"
+                      title="Camila Garcia on Facebook"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
@@ -281,6 +375,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.linkedin.com/"
+                      title="Camila Garcia on LinkedIn"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -305,6 +400,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.instagram.com/"
+                      title="Daniel Wilson on Instagram"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -312,7 +408,11 @@
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a class="team-social-link" href="https://www.x.com/">
+                    <a
+                      class="team-social-link"
+                      href="https://www.x.com/"
+                      title="Daniel Wilson on Twitter"
+                    >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -322,6 +422,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.facebook.com/"
+                      title="Daniel Wilson on Facebook"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
@@ -332,6 +433,7 @@
                     <a
                       class="team-social-link"
                       href="https://www.linkedin.com/"
+                      title="Daniel Wilson on LinkedIn"
                     >
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -604,7 +706,7 @@
           <div class="modal-field modal-field-comment">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
-              class="modal-input"
+              class="modal-input modal-input-comment"
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
