--- a/index.html
+++ b/index.html
@@ -107,32 +107,43 @@
               </li>
             </ul>
           </address>
-          <ul class="mobile-menu-socials-list">
-            <li class="mobile-menu-socials-item">
+          <ul class="mobile-menu-social-list">
+            <li class="mobile-menu-social-item">
               <a
-                class="mobile-menu-socials-link"
-                href="https://www.instagram.com"
-                >Instagram</a
+                href="https://www.instagram.com/"
+                class="mobile-menu-social-link"
               >
+                <svg class="monile-menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="mobile-menu-socials-item">
-              <a class="mobile-menu-socials-link" href="https://www.x.com"
-                >Twitter</a
-              >
+            <li class="mobile-menu-social-item">
+              <a href="https://www.x.com/" class="mobile-menu-social-link">
+                <svg class="monile-menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="mobile-menu-socials-item">
+            <li class="mobile-menu-social-item">
               <a
-                class="mobile-menu-socials-link"
-                href="https://www.facebook.com"
-                >Facebook</a
+                href="https://www.facebook.com/"
+                class="mobile-menu-social-link"
               >
+                <svg class="mobile-menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="mobile-menu-socials-item">
+            <li class="mobile-menu-social-item">
               <a
-                class="mobile-menu-socials-link"
-                href="https://www.linkedin.com"
-                >LinkedIn</a
+                href="https://www.linkedin.com/"
+                class="mobile-menu-social-link"
               >
+                <svg class="mobile-menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -214,6 +225,10 @@
             <li class="team-item">
               <img
                 src="./images/pfps/mark-guerrero.jpg"
+                srcset="
+                  ./images/pfps/mark-guerrero.jpg    1x,
+                  ./images/pfps/mark-guerrero@2x.jpg 2x
+                "
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -272,6 +287,10 @@
             <li class="team-item">
               <img
                 src="./images/pfps/tom-ford.jpg"
+                srcset="
+                  ./images/pfps/tom-ford.jpg    1x,
+                  ./images/pfps/tom-ford@2x.jpg 2x
+                "
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -330,6 +349,10 @@
             <li class="team-item">
               <img
                 src="./images/pfps/camila-garcia.jpg"
+                srcset="
+                  ./images/pfps/camila-garcia.jpg    1x,
+                  ./images/pfps/camila-garcia@2x.jpg 2x
+                "
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -388,6 +411,10 @@
             <li class="team-item">
               <img
                 src="./images/pfps/daniel-wilson.jpg"
+                srcset="
+                  ./images/pfps/daniel-wilson.jpg    1x,
+                  ./images/pfps/daniel-wilson@2x.jpg 2x
+                "
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -456,6 +483,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/portfolio-images/banking-app.jpg"
+                  srcset="
+                    ./images/portfolio-images/banking-app.jpg    1x,
+                    ./images/portfolio-images/banking-app@2x.jpg 2x
+                  "
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -475,6 +506,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/portfolio-images/cashless-payment.jpg"
+                  srcset="
+                    ./images/portfolio-images/cashless-payment.jpg    1x,
+                    ./images/portfolio-images/cashless-payment@2x.jpg 2x
+                  "
                   alt="Cashless Payment"
                   width="360"
                   height="300"
@@ -494,6 +529,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/portfolio-images/meditation-app.jpg"
+                  srcset="
+                    ./images/portfolio-images/meditation-app.jpg    1x,
+                    ./images/portfolio-images/meditation-app@2x.jpg 2x
+                  "
                   alt="Meditation App"
                   width="360"
                   height="300"
@@ -513,6 +552,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/portfolio-images/taxi-service.jpg"
+                  srcset="
+                    ./images/portfolio-images/taxi-service.jpg    1x,
+                    ./images/portfolio-images/taxi-service@2x.jpg 2x
+                  "
                   alt="Taxi Service"
                   width="360"
                   height="300"
@@ -532,6 +575,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/portfolio-images/screen-illustrations.jpg"
+                  srcset="
+                    ./images/portfolio-images/screen-illustrations.jpg    1x,
+                    ./images/portfolio-images/screen-illustrations@2x.jpg 2x
+                  "
                   alt="Screen Illustrations"
                   width="360"
                   height="300"
@@ -551,6 +598,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/portfolio-images/online-courses.jpg"
+                  srcset="
+                    ./images/portfolio-images/online-courses.jpg    1x,
+                    ./images/portfolio-images/online-courses@2x.jpg 2x
+                  "
                   alt="Online Courses"
                   width="360"
                   height="300"
