--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
             </li>
           </ul>
         </address>
-        <button type="button" class="burger-btn" title="Open mobile menu">
+        <button
+          id="burgerBtn"
+          type="button"
+          class="burger-btn"
+          title="Open mobile menu"
+        >
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
@@ -65,10 +70,11 @@
       </div>
 
       <!-- MOBILE MENU -->
-      <div class="mobile-menu">
+      <div id="mobileMenu" class="mobile-menu">
         <div class="container mobile-menu-container">
           <button
             type="button"
+            id="closeMobileMenuBtn"
             class="mobile-menu-close-btn"
             title="Close mobile menu"
           >
@@ -156,7 +162,9 @@
       <section class="page-hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-btn" type="button">Order Service</button>
+          <button id="orderServiceBtn" class="hero-btn" type="button">
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -690,10 +698,10 @@
       </div>
     </footer>
     <!-- BACKDROP -->
-    <div class="backdrop">
+    <div id="modalMenu" class="backdrop">
       <!-- MODAL -->
       <div class="modal">
-        <button class="modal-close-btn" type="button">
+        <button id="closeModalBtn" class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -790,5 +798,6 @@
         </form>
       </div>
     </div>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
